@@ -5,6 +5,7 @@ New features:
 ..F.I..... [ZBXNEXT-715] increased the size of sysmaps_elements.label and sysmaps_links.label fields to 2048 characters (Sasha)
 
 Bug fixes:
+....I..... [ZBX-7218] fixed configuration failing with Oracle 12.1 instant client libraries (asaveljevs, Sasha)
 A.F....... [ZBX-7165] fixed snmp fields validation in item configuration (Eduard)
 ..F....... [ZBX-5942] fixed setup navigation (Eduard, Pavels)
 ..F....... [ZBX-7137] fixed macros resolving in inventory host interfaces (Eduard)
